Efficient constructor usage